--- a/DeadlinesManager/Login/Base.lproj/Login.storyboard
+++ b/DeadlinesManager/Login/Base.lproj/Login.storyboard
@@ -77,55 +77,66 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="5Z2-B2-AKG">
-                                <rect key="frame" x="18.666666666666657" y="219.33333333333337" width="337.66666666666674" height="301"/>
+                                <rect key="frame" x="18.666666666666657" y="197.33333333333337" width="337.66666666666674" height="345"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ім'я:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3W5-3O-mdP">
-                                        <rect key="frame" x="0.0" y="0.0" width="337.66666666666669" height="33.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="337.66666666666669" height="31.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введіть своє ім'я" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="J0Q-b9-las">
-                                        <rect key="frame" x="0.0" y="33.666666666666657" width="337.66666666666669" height="33.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="31.333333333333314" width="337.66666666666669" height="31.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Прізвище:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="APl-0G-VL2">
+                                        <rect key="frame" x="0.0" y="62.666666666666664" width="337.66666666666669" height="31.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введіть своє прізвище" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nsy-cV-kHV">
+                                        <rect key="frame" x="0.0" y="93.999999999999972" width="337.66666666666669" height="31.666666666666671"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Логін:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l0p-7m-IQl">
-                                        <rect key="frame" x="0.0" y="66.999999999999972" width="337.66666666666669" height="33.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="125.66666666666664" width="337.66666666666669" height="31.333333333333329"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Створіть логін" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vdY-rf-Bhh">
-                                        <rect key="frame" x="0.0" y="100.33333333333334" width="337.66666666666669" height="33.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="156.99999999999997" width="337.66666666666669" height="31.333333333333343"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Пароль:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sze-sj-ovp">
-                                        <rect key="frame" x="0.0" y="133.99999999999997" width="337.66666666666669" height="33.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="188.33333333333334" width="337.66666666666669" height="31.333333333333343"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Створіть пароль" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8jX-VN-u4W">
-                                        <rect key="frame" x="0.0" y="167.33333333333334" width="337.66666666666669" height="33.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="219.66666666666666" width="337.66666666666669" height="31.333333333333343"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Підтвердження паролю:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l14-5J-eWW">
-                                        <rect key="frame" x="0.0" y="200.66666666666666" width="337.66666666666669" height="33.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="250.99999999999997" width="337.66666666666669" height="31.333333333333343"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введіть свій пароль знову" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cjz-uy-wBf">
-                                        <rect key="frame" x="0.0" y="233.99999999999997" width="337.66666666666669" height="33.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="282.33333333333337" width="337.66666666666669" height="31.333333333333314"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vaz-St-Y4H">
-                                        <rect key="frame" x="0.0" y="267.66666666666663" width="337.66666666666669" height="33.333333333333314"/>
-                                        <state key="normal" title="Зареєструваться"/>
+                                        <rect key="frame" x="0.0" y="313.66666666666663" width="337.66666666666669" height="31.333333333333314"/>
+                                        <state key="normal" title="Зареєструватися"/>
                                         <connections>
                                             <action selector="didPressSignInButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="j41-4s-KeF"/>
                                         </connections>
@@ -135,7 +146,7 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="5Z2-B2-AKG" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.41" id="EmQ-Hw-7ce"/>
+                            <constraint firstItem="5Z2-B2-AKG" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.47" id="EmQ-Hw-7ce"/>
                             <constraint firstItem="5Z2-B2-AKG" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="LqA-MV-9Ev"/>
                             <constraint firstItem="5Z2-B2-AKG" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" multiplier="0.9" id="gwM-PS-X8p"/>
                             <constraint firstItem="5Z2-B2-AKG" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.9" id="j5N-ln-u8p"/>
@@ -144,6 +155,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="bR9-4b-u51"/>
                     <connections>
+                        <outlet property="confirmButton" destination="Vaz-St-Y4H" id="Ndb-44-uVV"/>
                         <outlet property="confirmPasswordLabel" destination="l14-5J-eWW" id="YWd-Vn-KMD"/>
                         <outlet property="confirmPasswordTextField" destination="cjz-uy-wBf" id="zj5-7y-Yqq"/>
                         <outlet property="loginTextField" destination="vdY-rf-Bhh" id="6kM-c6-N5W"/>
@@ -151,27 +163,14 @@
                         <outlet property="nameLabel" destination="3W5-3O-mdP" id="lvq-XU-QGH"/>
                         <outlet property="nameTextField" destination="J0Q-b9-las" id="YXt-L8-GvL"/>
                         <outlet property="passwordTextField" destination="8jX-VN-u4W" id="RkK-3l-IHI"/>
+                        <outlet property="secondNameLabel" destination="APl-0G-VL2" id="bZ8-Vf-i47"/>
+                        <outlet property="secondNameTextField" destination="nsy-cV-kHV" id="vlI-eY-OQ4"/>
                         <outlet property="stackViewHeightConstraint" destination="EmQ-Hw-7ce" id="r71-RY-F3Y"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="330" y="106"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="lAD-Am-Hm9">
-            <objects>
-                <viewController id="KRs-mI-dM5" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="zhK-ns-6YV">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="Cex-XQ-zJ8"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mXD-SL-3fB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1070" y="106"/>
         </scene>
     </scenes>
 </document>
