--- a/DeadlinesManager/Main/Main.storyboard
+++ b/DeadlinesManager/Main/Main.storyboard
@@ -27,7 +27,7 @@
             </objects>
             <point key="canvasLocation" x="-225" y="-706"/>
         </scene>
-        <!--Root View Controller :)-->
+        <!--Settings-->
         <scene sceneID="Kml-OW-tua">
             <objects>
                 <tableViewController storyboardIdentifier="SettingsTableViewController" id="XlX-sI-eeu" customClass="SettingsTableViewController" customModule="DeadlinesManager" customModuleProvider="target" sceneMemberID="viewController">
@@ -119,7 +119,7 @@
                             <outlet property="delegate" destination="XlX-sI-eeu" id="J3w-sL-Cls"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller :)" id="5rS-VH-mqG"/>
+                    <navigationItem key="navigationItem" title="Settings" id="5rS-VH-mqG"/>
                     <connections>
                         <outlet property="loginLabel" destination="PZp-XT-INj" id="2We-Gs-gO5"/>
                         <outlet property="nameLabel" destination="ZMP-gE-7xR" id="jtu-w8-lBP"/>
